--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -265,6 +265,19 @@ if ($reviewsFound) {
     $ts_snippet .= '"@context": "http://schema.org",';
     $ts_snippet .= '"@type": "Organization",';
     $ts_snippet .= '"name": "'.$shopName.'",';
+    $ts_snippet .= '"url": "'.Mage::getBaseUrl().'",';
+    $ts_snippet .= '"logo": "'.$this->getSkinUrl('dist/assets/img/logo.png').'",';
+    $ts_snippet .= '"contactPoint": [{';
+    $ts_snippet .= '"@type": "ContactPoint",';
+    $ts_snippet .= '"telephone": "+49-8004566000",';
+    $ts_snippet .= '"contactType": "customer service"';
+    $ts_snippet .= '}],';
+    $ts_snippet .= '"sameAs": [';
+    $ts_snippet .= '"https://www.facebook.com/gastrodax",';
+    $ts_snippet .= '"https://plus.google.com/+gastrodax",';
+    $ts_snippet .= '"https://twitter.com/gastrodax",';
+    $ts_snippet .= '"https://www.youtube.com/channel/UCTr6z7_W4adeggGR1Sa717g"';
+    $ts_snippet .= '],';
     $ts_snippet .= '"aggregateRating" : {';
     $ts_snippet .= '"@type": "AggregateRating",';
     $ts_snippet .= '"ratingValue" : "'.$result.'",';
