--- a/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
@@ -24,24 +24,24 @@ $_categories = $this->getCurrentChildCategories(); ?>
     <?php endforeach; ?>
     <li data-equalizer-watch>
         <div class="category-image">
-            <a href="<?php echo Mage::getUrl('hersteller/bartscher'); ?>"
+            <a href="<?php echo Mage::getUrl('').'hersteller/bartscher'; ?>"
                title="Bartscher Shop">
                 <img src="<?php echo $this->getSkinUrl('dist/assets/img/bartscher-shop.png'); ?>" alt="Bartscher Shop"/>
             </a>
             <h3>
-                <a href="<?php echo Mage::getUrl('hersteller/bartscher'); ?>"
+                <a href="<?php echo Mage::getUrl('').'hersteller/bartscher'; ?>"
                    title="Bartscher Shop">Bartscher Shop</a>
             </h3>
         </div>
     </li>
     <li data-equalizer-watch>
         <div class="category-image">
-            <a href="<?php echo Mage::getUrl('hersteller/aliseo'); ?>"
+            <a href="<?php echo Mage::getUrl('').'hersteller/aliseo'; ?>"
                title="Aliseo Profishop">
                 <img src="<?php echo $this->getSkinUrl('dist/assets/img/aliseo-profishop.png'); ?>" alt="Aliseo Profishop"/>
             </a>
             <h3>
-                <a href="<?php echo Mage::getUrl('hersteller/aliseo'); ?>"
+                <a href="<?php echo Mage::getUrl('').'hersteller/aliseo'; ?>"
                    title="Aliseo Profishop">Aliseo Profishop</a>
             </h3>
         </div>
