--- a/app/design/frontend/foundation/default/template/page/html/header.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/header.phtml
@@ -54,13 +54,13 @@
                     </a>
                 </li>
                 <li class="shipping">
-                    <a href="<?php echo Mage::getUrl('lieferung'); ?>">
+                    <a href="<?php echo Mage::getUrl('').'lieferung'; ?>">
                         <img src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA) . 'wysiwyg/versandkostenfrei.png' ?>"
                              alt="kostenfreie Lieferung ab 99 EUR">
                     </a>
                 </li>
                 <li class="deal">
-                    <a href="<?php echo Mage::getUrl('super-sale'); ?>">SALE %</a>
+                    <a href="<?php echo Mage::getUrl('').'super-sale'; ?>">SALE %</a>
                 </li>
             </ul>
         </div>
