change small things

--- a/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
@@ -46,4 +46,16 @@ $_categories = $this->getCurrentChildCategories(); ?>
             </h3>
         </div>
     </li>
+    <li data-equalizer-watch>
+        <div class="category-image">
+            <a href="<?php echo Mage::getUrl('').'altgeraeteentsorgung'; ?>"
+               title="Umweltprämie & Abwrackprämie">
+                <img src="<?php echo $this->getSkinUrl('dist/assets/img/umwelt_abwrackpraemie.jpg'); ?>" alt="Umweltprämie & Abwrackprämie"/>
+            </a>
+            <h3>
+                <a href="<?php echo Mage::getUrl('').'altgeraeteentsorgung'; ?>"
+                   title="Umweltprämie & Abwrackprämie">Umwelt-/ Abwrackprämie</a>
+            </h3>
+        </div>
+    </li>
 </ul>
