--- a/app/design/frontend/foundation/default/template/page/html/head.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/head.phtml
@@ -1,4 +1,4 @@
-<meta http-equiv="Content-Type" content="<?php echo $this->getContentType() ?>"/>
+<meta charset="UTF-8">
 <title><?php echo $this->getTitle() ?></title>
 <meta name="description" content="<?php echo htmlspecialchars($this->getDescription()) ?>"/>
 <meta name="keywords" content="<?php echo htmlspecialchars($this->getKeywords()) ?>"/>
@@ -9,6 +9,7 @@
 <meta name="p:domain_verify" content="5ba5a7663a62546768175e120923b676"/>
 <link rel="icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon"/>
 <link rel="shortcut icon" href="<?php echo $this->getFaviconFile(); ?>" type="image/x-icon"/>
+<link rel="apple-touch-icon" href="<?php echo $this->getSkinUrl('dist/assets/img/icon152.png') ?>"/>
 <link rel="manifest" href="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB).'manifest.json' ?>" />
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 <script>jQuery.noConflict();</script>
