--- a/skin/frontend/foundation/default/src/assets/scss/custom/_owl.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_owl.scss
@@ -2,30 +2,30 @@
  * 	Default theme - Owl Carousel CSS File
  */
 
-$color-base: #869791 !default;
-$color-white: #FFF !default;
-$color-gray: #D6D6D6 !default;
+$owl-color-base: #869791 !default;
+$owl-color-white: #FFF !default;
+$owl-color-gray: #D6D6D6 !default;
 
 //nav
 
-$nav-color: $white;
-$nav-color-hover: $white;
-$nav-font-size: .9rem;
-$nav-rounded: $global-radius;
-$nav-margin: 0 $global-margin;
-$nav-padding: 0;
-$nav-background: $primary-color;
-$nav-background-hover: scale-color($button-background, $lightness: -15%);
-$nav-disabled-opacity: 0.5 !default;
+$owl-nav-color: $white;
+$owl-nav-color-hover: $white;
+$owl-nav-font-size: .9rem;
+$owl-nav-rounded: $global-radius;
+$owl-nav-margin: 0 $global-margin;
+$owl-nav-padding: 0;
+$owl-nav-background: $primary-color;
+$owl-nav-background-hover: scale-color($button-background, $lightness: -15%);
+$owl-nav-disabled-opacity: 0.5 !default;
 
 //dots
 
-$dot-width: 10px !default;
-$dot-height: 10px !default;
-$dot-rounded: 30px !default;
-$dot-margin: 5px 7px !default;
-$dot-background: $color-gray !default;
-$dot-background-active: $color-base !default;
+$owl-dot-width: 10px !default;
+$owl-dot-height: 10px !default;
+$owl-dot-rounded: 30px !default;
+$owl-dot-margin: 5px 7px !default;
+$owl-dot-background: $owl-color-gray !default;
+$owl-dot-background-active: $owl-color-base !default;
 
 @import '../../../node_modules/owl.carousel/src/scss/owl.carousel';
 @import '../../../node_modules/owl.carousel/src/scss/theme.default';
