change small things

--- a/skin/frontend/foundation/default/src/assets/scss/custom/_globals.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_globals.scss
@@ -130,7 +130,7 @@ iframe[name='google_conversion_frame'] {
 }
 
 .col-main {
-  margin-bottom: $global-margin;
+  margin: $global-margin 0;
 }
 
 #tsbadge4_db8d3657bdbe440c985ae127463eaad4 {
