--- a/skin/frontend/foundation/default/src/assets/scss/_settings.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/_settings.scss
@@ -112,6 +112,7 @@ $breakpoints: (
         large: 1024px,
         xlarge: 1200px,
         xxlarge: 1440px,
+        xxxlarge: 1920px
 );
 $print-breakpoint: large;
 $breakpoint-classes: (small medium large);
