--- a/skin/frontend/foundation/default/src/assets/scss/custom/_grid.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_grid.scss
@@ -152,7 +152,7 @@ header {
 .categories-grid, .categories-home-grid, .manufacturers-grid {
   @include xy-grid-container;
   @include xy-grid;
-  @include xy-grid-layout(2, 'li', true, $grid-margin-gutters, margin, bottom);
+  @include xy-grid-layout(2, 'li', true, 15px, margin, top bottom left right);
   justify-content: center;
 }
 
@@ -443,14 +443,9 @@ footer {
     .header-top {
       .brand {
         @include xy-cell(6);
+        justify-content: center;
+        align-items: center;
       }
-      .trusted {
-        @include xy-cell(6);
-      }
-      .hotline {
-        @include xy-cell(6);
-      }
-
     }
     .header-bottom {
       nav {
