--- a/app/design/frontend/foundation/default/template/page/html/cookienotice.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/cookienotice.phtml
@@ -15,7 +15,7 @@
             window.location.href = '<?php echo Mage::getUrl('cms/index/noCookies')?>';
         }
     }
-    jQuery('notice-cookie-block').show();
+    $('notice-cookie-block').show();
     /* ]]> */
 </script>
 <?php endif; ?>
