--- a/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_catalog.scss
@@ -43,9 +43,9 @@
 
 //Category & Manufacturers
 .categories-grid, .categories-home-grid, .manufacturers-grid {
-  padding-top: .5rem;
+  padding: 0 0 1em 0;
   li {
-    padding: .5rem;
+    padding: .5em;
     border: 1px solid $medium-gray;
     cursor: pointer;
     text-align: center;
@@ -322,4 +322,8 @@
   @include breakpoint(medium down) {
 
   }
+}
+
+.sticky {
+  position: relative;
 }
