--- a/skin/frontend/foundation/default/src/assets/scss/custom/_globals.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_globals.scss
@@ -1,6 +1,7 @@
 .no-display {
-  display:none;
+  display: none;
 }
+
 //Lists
 ul {
   list-style-type: none;
@@ -18,6 +19,7 @@ ol.decimal, ol.decimal > li ol {
   list-style-type: decimal;
   list-style-position: inside;
 }
+
 //Selects
 select {
   -webkit-appearance: none;
@@ -25,17 +27,21 @@ select {
   text-indent: 1px;
   text-overflow: '';
 }
+
 select::-ms-expand {
   display: none;
 }
+
 //Links
 a {
   text-decoration: none;
 }
+
 //Inputs
 .input-group > :last-child {
   border-radius: 0 $global-radius $global-radius 0;
 }
+
 // Vertical Align
 .valign-middle {
   display: table;
@@ -80,6 +86,7 @@ a {
     font-size: 1rem;
   }
 }
+
 //BorderRadius
 .input-group > :not(:first-child):not(:last-child) {
   border-radius: 0;
@@ -91,7 +98,8 @@ a[href^="mailto:"]:before {
   margin-right: 0.5em;
 }
 
-.std  {
+.std, .page-title, .category-title {
+  padding: 0 1em;
   h1, h2, h3, h4, h5, h6 {
     color: $primary-color;
   }
