--- a/skin/frontend/foundation/default/src/assets/scss/custom/_header.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_header.scss
@@ -124,6 +124,7 @@ header {
         color: $white;
         border-color: $white;
         padding: 0.3rem;
+        height: 2rem;
       }
     }
     .search {
