--- a/app/design/frontend/foundation/default/template/magesetup/contacts/form.phtml
+++ b/app/design/frontend/foundation/default/template/magesetup/contacts/form.phtml
@@ -92,7 +92,7 @@
                 </div>
                 <div class="bdsg-checkbox">
                     <input id="bdsg-checkbox" type="checkbox" required><label
-                        for="bdsg-checkbox"><?php echo $this->__('I hereby consent to the collection and use of my data entered above in accordance with the <a href="%s">privacy policy</a>.', Mage::getUrl('datenschutz')) ?></label>
+                        for="bdsg-checkbox"><?php echo $this->__('Ich stimme zu, dass meine Angaben aus dem Kontaktformular zur Beantwortung meiner Anfrage erhoben und verarbeitet werden. Die von Ihnen im Kontaktformular eingegebenen Daten verbleiben bei uns, bis Sie uns zur Löschung auffordern, Ihre Einwilligung zur Speicherung widerrufen oder der Zweck für die Datenspeicherung entfällt (z.B. nach abgeschlossener Bearbeitung Ihrer Anfrage). Hinweis: Sie können Ihre Einwilligung jederzeit für die Zukunft per E-Mail an datenschutz@newgastroline.de widerrufen. Detaillierte Informationen zum Umgang mit Nutzerdaten finden Sie in unserer <a href="%s">Datenschutzerklärung</a>.', Mage::getUrl('datenschutz')) ?></label>
                 </div>
             </div>
             <div class="buttons-set">
