--- a/app/design/frontend/foundation/default/template/checkout/onepage/review/info.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/onepage/review/info.phtml
@@ -28,7 +28,7 @@
 <div id="checkout-review-table-wrapper">
     <table class="data-table" id="checkout-review-table">
         <?php if ($this->helper('tax')->displayCartBothPrices()): $colspan = $rowspan = 2; else: $colspan = $rowspan = 1; endif; ?>
-        <col />
+        <col width="1" />
         <col width="1" />
         <col width="1" />
         <col width="1" />
@@ -39,7 +39,7 @@
         <?php endif; ?>
         <thead>
             <tr>
-                <th rowspan="<?php echo $rowspan ?>">&nbsp;sadasdasd</th>
+                <th rowspan="<?php echo $rowspan ?>"></th>
                 <th rowspan="<?php echo $rowspan ?>"><?php echo $this->__('Product Name') ?></th>
                 <th colspan="<?php echo $colspan ?>" class="text-center"><?php echo $this->__('Price') ?></th>
                 <th rowspan="<?php echo $rowspan ?>" class="text-center"><?php echo $this->__('Qty') ?></th>
