--- a/app/design/frontend/foundation/default/template/magesetup/checkout/onepage/review/info.phtml
+++ b/app/design/frontend/foundation/default/template/magesetup/checkout/onepage/review/info.phtml
@@ -28,8 +28,8 @@
 <div id="checkout-review-table-wrapper">
     <table class="data-table" id="checkout-review-table">
         <?php if ($this->helper('tax')->displayCartBothPrices()): $colspan = $rowspan = 2; else: $colspan = $rowspan = 1; endif; ?>
-        <col/>
-        <col/>
+        <col width="1"/>
+        <col width="1"/>
         <col width="1"/>
         <col width="1"/>
         <col width="1"/>
