--- a/app/design/frontend/foundation/default/template/tm/easytabs/tab/catalog/product/view/upsell.phtml
+++ b/app/design/frontend/foundation/default/template/tm/easytabs/tab/catalog/product/view/upsell.phtml
@@ -32,9 +32,9 @@ $_helper = $this->helper('catalog/output');
             <?php foreach ($this->getItems() as $_product): ?>
                 <li class="item">
                     <div class="content">
-                        <h3 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>"
+                        <div class="product-name"><a href="<?php echo $_product->getProductUrl() ?>"
                                                     title="<?php echo $this->stripTags($_product->getName(), null, true) ?>"><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></a>
-                        </h3>
+                        </div>
                         <div class="products-image float-center">
                             <?php if ($_product->getFinalPrice() < $_product->getPrice()) { ?>
                                 <?php $_savingPercent = 100 - round(($_product->getFinalPrice() / $_product->getPrice()) * 100); ?>
